[package]
name = "capsule"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.11"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
ic-stable-structures = "0.6.7"
num-traits = "0.2"
sha2 = "0.10.6"
hex = "0.4"
log = "0.4"
ic-ledger-types = "0.14.0"
